--- a/currency-conversion-service/pom.xml
+++ b/currency-conversion-service/pom.xml
@@ -45,7 +45,11 @@
 		    <artifactId>spring-cloud-starter-ribbon</artifactId>
 		    <version>1.4.7.RELEASE</version>
 		</dependency>
-		
+		<dependency>
+	      <groupId>org.springframework.cloud</groupId>
+	      <artifactId>spring-cloud-starter-netflix-eureka-client</artifactId>
+	    </dependency>
+			 
 
 		<dependency>
 			<groupId>org.springframework.boot</groupId>
