--- a/currency-conversion-service/src/main/resources/application.properties
+++ b/currency-conversion-service/src/main/resources/application.properties
@@ -1,3 +1,4 @@
 spring.application.name=currency-conversion-service
 server.port=8100
-currency-exchange-service.ribbon.listOfServers=http://localhost:8008,http://localhost:8009,http://localhost:8010
+eureka.client.service-url.default-zone=http://localhost:8761/eureka
+#currency-exchange-service.ribbon.listOfServers=http://localhost:8008,http://localhost:8009
