--- a/currency-exchange-service/src/main/resources/application.properties
+++ b/currency-exchange-service/src/main/resources/application.properties
@@ -1,4 +1,4 @@
-spring.application.name=currency-exchange-serrvice
+spring.application.name=currency-exchange-service
 server.port=8008
 
 
@@ -10,3 +10,4 @@ spring.datasource.driver-class-name=com.mysql.jdbc.Driver
 spring.jpa.hibernate.ddl-auto=update
 spring.jpa.show-sql=true
 
+eureka.client.service-url.default-zone=http://localhost:8761/eureka
